--- a/src/2-form.html
+++ b/src/2-form.html
@@ -19,6 +19,6 @@
       <button type="submit">Submit</button>
     </form>
 
-    <script src="2-form.js"></script>
+    <script type="module" src="2-form.js"></script>
   </body>
 </html>
